[package]
name = "cowsay-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_colours = "1.2.2"
charasay = "3.0.1"
rand = "0.8.5"
rusttype = "0.9.3"

[dependencies.cowparse]
path = "./cowparse"
features = ["images"]

[dependencies.image]
version = "0.24.7"
default-features = false
features = ["webp", "webp-encoder"]

[dependencies.serenity]
version = "0.11.6"
default-features = false
features = ["builder", "cache",  "client", "gateway", "http", "model", "rustls_backend"]

[dependencies.tokio]
version = "1.29.1"
features = ["macros", "rt-multi-thread"]

