[package]
name = "cowserve"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.73"
base64 = "0.21.2"
chrono = "0.4.26"
prost = "0.11.9"
tonic = "0.9.2"

[dependencies.sqlx]
version = "0.7.1"
features = ["chrono", "uuid", "postgres", "runtime-tokio", "time", "tls-native-tls"]
# see https://github.com/launchbadge/sqlx/pull/2670
git = "https://github.com/launchbadge/sqlx"
rev = "487b89a4b6c67aacd7c15b0814a450801333153c"

[dependencies.tokio]
version = "1.29.1"
features = ["macros", "rt-multi-thread"]

[build-dependencies]
tonic-build = "0.9.2"
